Create INDEX.html et main.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Albert Camus - Biographie</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="biographie">
+
+<!-- HEADER : Navigation principale du site -->
+<header>
+    <nav>
+        <!-- Menu burger sera ajouté en partie 5 -->
+        <h1>Albert Camus</h1>
+    </nav>
+</header>
+
+<!-- MAIN : Contenu principal de la page biographie -->
+<main>
+    <section class="contenu-biographie">
+        <!-- Titre principal de la section -->
+        <h1>Biographie d'Albert Camus</h1>
+
+        <!-- Sous-section : Enfance et jeunesse -->
+        <article>
+            <h2>Enfance et jeunesse (1913-1932)</h2>
+            <p>
+                Albert Camus naît le 7 novembre 1913 à Mondovi, en Algérie française.
+                Son père, Lucien Camus, ouvrier agricole, meurt lors de la bataille de la Marne en 1914.
+                Sa mère, Catherine Sintès, d'origine espagnole, est sourde et quasi-muette.
+                Albert grandit dans le quartier populaire de Belcourt à Alger, dans une extrême pauvreté.
+            </p>
+            <p>
+                Grâce à son instituteur Louis Germain, qui décèle son intelligence, Camus obtient une bourse
+                et peut poursuivre ses études au lycée Bugeaud d'Alger. C'est là qu'il découvre la philosophie
+                et développe sa passion pour le football, qu'il doit abandonner suite à une tuberculose en 1930.
+            </p>
+        </article>
+
+        <!-- Sous-section : Études et débuts littéraires -->
+        <article>
+            <h2>Études et débuts littéraires (1932-1940)</h2>
+            <p>
+                Camus étudie la philosophie à l'Université d'Alger. Il adhère au Parti communiste algérien en 1935,
+                mais en sera exclu deux ans plus tard pour divergences politiques. Il fonde la troupe de théâtre
+                du Théâtre du Travail, puis du Théâtre de l'Équipe.
+            </p>
+            <p>
+                En 1936, il obtient son diplôme d'études supérieures avec un mémoire sur "Rapports de l'hellénisme
+                et du christianisme à travers les œuvres de Plotin et de saint Augustin". Sa tuberculose l'empêche
+                de passer l'agrégation de philosophie.
+            </p>
+        </article>
+
+        <!-- Sous-section : La guerre et la Résistance -->
+        <article>
+            <h2>La guerre et la Résistance (1940-1945)</h2>
+            <p>
+                En 1940, Camus quitte l'Algérie pour Paris. Il travaille comme secrétaire de rédaction à Paris-Soir.
+                Pendant l'Occupation, il participe à la Résistance et devient rédacteur en chef du journal clandestin Combat.
+            </p>
+            <p>
+                C'est durant cette période qu'il publie "L'Étranger" (1942) et "Le Mythe de Sisyphe" (1942),
+                deux œuvres majeures qui explorent l'absurde de la condition humaine. Il rencontre Jean-Paul Sartre
+                et Simone de Beauvoir, avec qui il entretient d'abord des relations amicales.
+            </p>
+        </article>
+
+        <!-- Sous-section : Consécration et engagements -->
+        <article>
+            <h2>Consécration et engagements (1945-1957)</h2>
+            <p>
+                Après la guerre, Camus connaît le succès avec "La Peste" (1947) et "L'Homme révolté" (1951).
+                Ce dernier ouvrage provoque une rupture définitive avec Sartre en 1952, les deux intellectuels
+                s'opposant sur la question du communisme et des moyens de la révolution.
+            </p>
+            <p>
+                Camus s'engage contre toutes les formes de totalitarisme et prend position contre la peine de mort.
+                Durant la guerre d'Algérie, il appelle à une trêve civile, cherchant une voie médiane entre
+                l'indépendance et le maintien de l'Algérie française, ce qui lui vaut des critiques de tous bords.
+            </p>
+        </article>
+
+        <!-- Sous-section : Prix Nobel et mort tragique -->
+        <article>
+            <h2>Prix Nobel et mort tragique (1957-1960)</h2>
+            <p>
+                En 1957, à 44 ans, Albert Camus reçoit le Prix Nobel de Littérature "pour l'ensemble d'une œuvre
+                qui met en lumière, avec un sérieux pénétrant, les problèmes se posant de nos jours à la conscience
+                des hommes". Il est le deuxième plus jeune lauréat de ce prix.
+            </p>
+            <p>
+                Le 4 janvier 1960, Albert Camus meurt dans un accident de voiture à Villeblevin, dans l'Yonne,
+                alors qu'il voyageait avec son éditeur Michel Gallimard. Dans sa poche, on retrouve le manuscrit
+                inachevé de "Le Premier Homme", roman autobiographique qui sera publié à titre posthume en 1994.
+            </p>
+        </article>
+
+        <!-- Citation emblématique -->
+        <blockquote>
+            <p>"Au milieu de l'hiver, j'ai découvert en moi un invincible été."</p>
+            <cite>— Albert Camus, Retour à Tipasa</cite>
+        </blockquote>
+    </section>
+</main>
+
+<!-- FOOTER : Pied de page avec informations légales -->
+<footer>
+    <p>&copy; 2026 - Projet pédagogique sur Albert Camus</p>
+    <p>Réalisé dans le cadre du module M293 - Développement Web</p>
+</footer>
 
 </body>
 </html>
