--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- HEADER : Navigation principale du site -->
 <header>
     <nav>
-        <!-- Menu burger sera ajouté en partie 5 -->
+        <!-- Menu burger sera  à ajouté  -->
         <h1>Albert Camus</h1>
     </nav>
 </header>
@@ -107,8 +107,8 @@
 
 <!-- FOOTER : Pied de page avec informations légales -->
 <footer>
-    <p>&copy; 2026 - Projet pédagogique sur Albert Camus</p>
-    <p>Réalisé dans le cadre du module M293 - Développement Web</p>
+    <p>&copy; 2026 - Projet pédagogique sur Albert Camus par <strong>Aurélien Broglie</strong></p>
+    <p>Réalisé dans le cadre de l'atelier HTML/CSS - CFC 1ere année</p>
 </footer>
 
 </body>
