--- a/html/index.html
+++ b/html/index.html
@@ -43,8 +43,8 @@
             <h2>Études et débuts littéraires (1932-1940)</h2>
             <p>
                 Camus étudie la philosophie à l'Université d'Alger. Il adhère au Parti communiste algérien en 1935,
-                mais en sera exclu deux ans plus tard pour divergences politiques. Il fonde la troupe de théâtre
-                du Théâtre du Travail, puis du Théâtre de l'Équipe.
+                mais en sera exclu deux ans plus tard pour divergences politiques. Il fonde la troupe de théâtre :
+                Théâtre du Travail, puis du Théâtre de l'Équipe.
             </p>
             <p>
                 En 1936, il obtient son diplôme d'études supérieures avec un mémoire sur "Rapports de l'hellénisme
