--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albert Camus - Biographie</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body class="biographie">
 
@@ -12,7 +12,7 @@
 <header>
     <nav>
         <!-- Menu burger sera à ajouté  -->
-        <h1>Albert Camus</h1>
+        <div class="nom">Albert Camus</div>
     </nav>
 </header>
 
@@ -108,6 +108,7 @@
 <!-- FOOTER : Pied de page avec informations légales -->
 <footer>
     <p>&copy; 2026 - Projet pédagogique sur Albert Camus par <strong>Aurélien Broglie</strong></p>
+    <p>Contact : <a href="mailto:contact@exemple.com">aurelien.broglie@etik.com</a></p>
     <p>Réalisé dans le cadre de l'atelier HTML/CSS- CFC 1ere année</p>
 </footer>
 
