ADD balises <strong/> index.html

--- a/html/index.html
+++ b/html/index.html
@@ -47,8 +47,8 @@
                 Théâtre du Travail, puis du Théâtre de l'Équipe.
             </p>
             <p>
-                En 1936, il obtient son diplôme d'études supérieures avec un mémoire sur "Rapports de l'hellénisme
-                et du christianisme à travers les œuvres de Plotin et de saint Augustin". Sa tuberculose l'empêche
+                En 1936, il obtient son diplôme d'études supérieures avec un mémoire sur <strong>"Rapports de l'hellénisme
+                et du christianisme à travers les œuvres de Plotin et de saint Augustin".</strong> Sa tuberculose l'empêche
                 de passer l'agrégation de philosophie.
             </p>
         </article>
@@ -61,7 +61,7 @@
                 Pendant l'Occupation, il participe à la Résistance et devient rédacteur en chef du journal clandestin Combat.
             </p>
             <p>
-                C'est durant cette période qu'il publie "L'Étranger" (1942) et "Le Mythe de Sisyphe" (1942),
+                C'est durant cette période qu'il publie <strong>"L'Étranger" (1942)</strong> et <strong>"Le Mythe de Sisyphe" (1942)</strong>,
                 deux œuvres majeures qui explorent l'absurde de la condition humaine. Il rencontre Jean-Paul Sartre
                 et Simone de Beauvoir, avec qui il entretient d'abord des relations amicales.
             </p>
@@ -71,7 +71,7 @@
         <article>
             <h2>Consécration et engagements (1945-1957)</h2>
             <p>
-                Après la guerre, Camus connaît le succès avec "La Peste" (1947) et "L'Homme révolté" (1951).
+                Après la guerre, Camus connaît le succès avec <strong>"La Peste" (1947)</strong> et <strong>"L'Homme révolté" (1951)</strong>.
                 Ce dernier ouvrage provoque une rupture définitive avec Sartre en 1952, les deux intellectuels
                 s'opposant sur la question du communisme et des moyens de la révolution.
             </p>
@@ -86,20 +86,20 @@
         <article>
             <h2>Prix Nobel et mort tragique (1957-1960)</h2>
             <p>
-                En 1957, à 44 ans, Albert Camus reçoit le Prix Nobel de Littérature "pour l'ensemble d'une œuvre
+                En 1957, à 44 ans, Albert Camus reçoit <strong>le Prix Nobel de Littérature "pour l'ensemble d'une œuvre
                 qui met en lumière, avec un sérieux pénétrant, les problèmes se posant de nos jours à la conscience
-                des hommes". Il est le deuxième plus jeune lauréat de ce prix.
+                des hommes"</strong>. Il est le deuxième plus jeune lauréat de ce prix.
             </p>
             <p>
                 Le 4 janvier 1960, Albert Camus meurt dans un accident de voiture à Villeblevin, dans l'Yonne,
                 alors qu'il voyageait avec son éditeur Michel Gallimard. Dans sa poche, on retrouve le manuscrit
-                inachevé de "Le Premier Homme", roman autobiographique qui sera publié à titre posthume en 1994.
+                inachevé de <strong>"Le Premier Homme"</strong>, roman autobiographique qui sera publié à titre posthume en 1994.
             </p>
         </article>
 
         <!-- Citation emblématique -->
         <blockquote>
-            <p>"Au milieu de l'hiver, j'ai découvert en moi un invincible été."</p>
+            <p><strong>"Au milieu de l'hiver, j'ai découvert en moi un invincible été."</strong></p>
             <cite>— Albert Camus, Retour à Tipasa</cite>
         </blockquote>
     </section>
