--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,8 @@
 
 <!-- HEADER : Navigation principale du site -->
 <header>
-    <nav>
-        <!-- Menu burger sera à ajouté  -->
-        <div class="nom">Albert Camus</div>
-    </nav>
+    <img src="../img/bandeau_sépia.webp" alt="Albert Camus" class="img-bandeau">
+    <div class="nom">Albert Camus</div>
 </header>
 
 <!-- MAIN : Contenu principal de la page biographie -->
