--- a/part2_romans/romans.html
+++ b/part2_romans/romans.html
@@ -136,7 +136,8 @@
                 et l'appartenance, la recherche du père absent.
             </p>
             <blockquote>
-                <p>"Pauvre et libre au lieu de riche et esclave. Bien sûr, on ne peut pas être pauvre et libre en même temps, puisque la pauvreté asservit, mais je préfère la pauvreté dans la liberté à la richesse dans l'esclavage."</p>
+                <p>"Pauvre et libre au lieu de riche et esclave. Bien sûr, on ne peut pas être pauvre et libre en même temps,
+                    puisque la pauvreté asservit, mais je préfère la pauvreté dans la liberté à la richesse dans l'esclavage."</p>
                 <cite>— Le Premier Homme</cite>
             </blockquote>
         </article>
@@ -147,6 +148,7 @@
 <!-- FOOTER : Pied de page avec informations légales -->
 <footer>
     <p>&copy; 2026 - Projet pédagogique sur Albert Camus par <strong>Aurélien Broglie</strong></p>
+    <p>Contact : <a href="mailto:contact@exemple.com">aurelien.broglie@etik.com</a></p>
     <p>Réalisé dans le cadre de l'atelier HTML/CSS- CFC 1ere année</p>
 </footer>
 
