FIX header background

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 
 <!-- HEADER : Navigation principale du site -->
 <header>
-    <img src="../img/bandeau_sépia.webp" alt="Albert Camus" class="img-bandeau">
+<!--    <img src="../img/bandeau_sépia.webp" alt="Albert Camus" class="img-bandeau">-->
     <div class="nom">Albert Camus</div>
 </header>
 
